<resources>
    <string name="app_name">HomeService</string>
    <string name="Hi_SIGNIN">Hi SIGNIN</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="New_Member">New Member ?</string>
    <string name="setting_sign_out">SIGN OUT</string>
    <string name="setting_sign_IN">SIGN IN</string>
    <string name="setting_sign_up">SIGN UP</string>
    <string name="btn_login">LOG IN</string>
    <string name="get_start_now">Get Start Now </string>
    <string name="email">Email</string>
    <string name="Full_Name">FullName</string>
    <string name="Service_provider">Service provider</string>
    <string name="Customer">Customer</string>
    <string name="Next">Next</string>
    <string name="Done">Done </string>
    <string name="about">About Application </string>
    <string name="Terms_and_Condition">Terms and Condition </string>
    <string name="Privacy">Privacy and policy</string>
    <string name="ErorrLogin">Login failed</string>
    <string name="passandemail">Password is required and Email</string>
    <string name="pass1">Password is required </string>
    <string name="email1">Email is required </string>

    <string name="Go_To_Home">Go To Home </string>
    <string name="Donesent">The ORDER has been sent. A technician will contact you </string>
    <string name="serviceType"> Service Type </string>
    <string name="location">location </string>
    <string name="OrderId">OrderId # </string>
    <string name="ORDER">الطلب </string>

    <string name="AddOrder">Add Order</string>
    <string name="Phone">Phone</string>
    <string name="Have_Account">Have Account</string>
    <string name="Terms_Conditions">Terms Conditions</string>
    <string name="Select_Service">Select Service</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_Pending">Pending</string>
    <string name="tab_Completed">Completed</string>
    <string name="tab_Underway">Underway</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="Contact_withprovider">Contact provider</string>
    <string name="Send">Send</string>
    <string name="Favorite">Favorite</string>
    <string name="Language">Language</string>
    <string name="setting_change">Change Password</string>
    <string name="setting_faqs">FAQ,s</string>
    <string name="setting_about">About App</string>
    <string name="setting_terms">Terms and Condition</string>
    <string name="setting_privacy">Privacy Policy</string>
    <string name="setting_rating">Rating App</string>
    <string name="more">More</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="New_Password">New Password</string>
    <string name="Current_Password">Current Password</string>
    <string name="Change_Password"> Change Password </string>
    <string name="image_must"> image must be no more than 2 MB Max 5 Image</string>
    <string name="More_Details"> More Details About Problem …...</string>
    <string name="More_DetailsLocation"> More Details About Location …...</string>

    <string name="Type_Your_message_here">Type Your message here ....</string>
    <string name="title_activity_service_provider_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>