<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.voise.homeservisegraduateproject.ui.uiCustomerUser.home.HomeFragmentCustomer"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_customer" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.voise.homeservisegraduateproject.ui.uiCustomerUser.moreApp.MoreFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_more_customer" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.voise.homeservisegraduateproject.ui.uiCustomerUser.userSetting.UserSettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting_customer" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.voise.homeservisegraduateproject.ui.uiCustomerUser.order.PlaceholderFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting_customer" />
</navigation>