<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SplashScreen.SuccesAddOrderActivity">

        <ImageView
            android:id="@+id/imageSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_success">

        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageSuccess"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.voise.homeservisegraduateproject.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ORDER"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.voise.homeservisegraduateproject.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Done"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.voise.homeservisegraduateproject.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Donesent"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:textStyle="bold" />

            <com.voise.homeservisegraduateproject.customfonts.MyButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gradient_btn"
                android:text="@string/Go_To_Home"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:id="@+id/Go_To_Home"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</layout>