<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/editFrame"
        tools:context=".ui.auth.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_splash"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#00F5F5F5"

                android:layoutDirection="locale">

                <ImageView
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_logo">

                </ImageView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@drawable/shape_login"
                android:layoutDirection="locale"
                android:orientation="vertical"
                android:padding="20dp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:layoutDirection="locale"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.voise.homeservisegraduateproject.customfonts.MyTextView
                      android:id="@+id/Service_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Service_provider"
                        android:textColor="@color/colorDark"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <com.voise.homeservisegraduateproject.customfonts.MyTextView
                        android:id="@+id/Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Customer"
                        android:textColor="@color/colorDark"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/shape_selector"
                    android:layoutDirection="locale"
                    android:weightSum="2">


                    <com.voise.homeservisegraduateproject.customfonts.MyEditText
                        android:id="@+id/edit_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="2"
                        android:background="@drawable/shape_phone"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:textColor="@color/colorDark"
                        android:textSize="14sp" />
                </LinearLayout>


                <com.marlonmafra.android.widget.EditTextPassword
                    android:id="@+id/E_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/shape_password"
                    android:gravity="center"
                    android:hint="********"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorDark"
                    android:textSize="13sp"
                    app:hidePasswordIcon="@drawable/ic_hide_password"
                    app:iconPosition="right"
                    app:showPasswordIcon="@drawable/ic_show_password" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:layoutDirection="locale"
                    android:orientation="horizontal">


                    <com.voise.homeservisegraduateproject.customfonts.MyTextView

                        android:id="@+id/forget_Pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/forget_pass"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.2"
                    android:layoutDirection="locale"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <com.voise.homeservisegraduateproject.customfonts.MyTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/New_Member"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <com.voise.homeservisegraduateproject.customfonts.MyTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/setting_sign_up"
                                android:textColor="@color/colorDark"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.voise.homeservisegraduateproject.customfonts.MyButton
                            android:id="@+id/btn_signIN"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_gradient_btn"
                            android:text="@string/btn_login"
                            android:textColor="#fff"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4">

                    <com.voise.homeservisegraduateproject.customfonts.MyTextView
                        android:id="@+id/go"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        android:drawableRight="@drawable/ic_go"
                        android:drawablePadding="15dp"
                        android:gravity="center"
                        android:text="@string/get_start_now"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>